--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Dragon Ramen Den</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,6 +39,34 @@
     <div class="container-fliu">
         <div class="text-center"><p></p></div>
     </div>
+    <section class="our-story py-5">
+        <div class="container">
+            <div class="row text-center mb-4">
+                <div class="col border-bottom">
+                    <h2>Our Story</h2>
+                    <p class="lead">Discover how Dragon Ramen Den became 
+                        a neighborhood favorite for authentic ramen dishes
+                        and innovative flavors.
+                    </p>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <h3>From Passion to Plate</h3>
+                    <p>Dragon Ramen Den was born from a love of traditional Japanese
+                        ramen and a desire to bring authentic flavors to our local community.
+                        With hand-selected ingredients and a commitment to culinary excellence,
+                        we've built a space that celebrates no just food, but the experience 
+                        of sharing it with loved ones.
+                    </p>
+                    <p>Our journey began in a small kitchen, but our passion has led us to become a local favcorite,
+                        serving up ramen that's both innovative and rooted in tradition.
+                        Join us as we continue to explore new flavors, one bowl at a time.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
