Changed background images for sections 1&2.

--- a/index.html
+++ b/index.html
@@ -30,43 +30,17 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid hero d-flex align-items-center justify-content-center ">
-        <div class="text-center"><h1 class="display-4">Welcome to Dragon Ramen Den</h1>
-            <p class="lead">Experience the finest ramen in town!</p>
-            <a href="#" class="btn btn-lg btn-warning">Explore Menu</a>
-        </div>
+      <div class="container-fluid position-relative hero d-flex align-items-center justify-content-center g-0">
+        <img src="images/Untitled design-8.png" class="img-fluid w-100 " alt="...">
+       </div>
+        
     </div>
-    <div class="container-fliu">
-        <div class="text-center"><p></p></div>
+    <div class="container-fluid position-relative d-flex justify-content-center align-items-center g-0">
+        <img src="images/something about the food here.png" class="img-fluid w-100" alt="...">
+        <div class="overlay-text position-absolute text-center"><h1 class="section-two-head fw-bold text-decoration-underline lh-lg">Authentic<br>Bold<br>Made fresh daily</h1>
+            <button type="button" class="btn btn-warning btn-lg custom-btn">Explore Our Menu</button></div>
     </div>
-    <section class="our-story py-5">
-        <div class="container">
-            <div class="row text-center mb-4">
-                <div class="col border-bottom">
-                    <h2>Our Story</h2>
-                    <p class="lead">Discover how Dragon Ramen Den became 
-                        a neighborhood favorite for authentic ramen dishes
-                        and innovative flavors.
-                    </p>
-                </div>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <h3>From Passion to Plate</h3>
-                    <p>Dragon Ramen Den was born from a love of traditional Japanese
-                        ramen and a desire to bring authentic flavors to our local community.
-                        With hand-selected ingredients and a commitment to culinary excellence,
-                        we've built a space that celebrates no just food, but the experience 
-                        of sharing it with loved ones.
-                    </p>
-                    <p>Our journey began in a small kitchen, but our passion has led us to become a local favcorite,
-                        serving up ramen that's both innovative and rooted in tradition.
-                        Join us as we continue to explore new flavors, one bowl at a time.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
