add style to menu page.

--- a/menu.html
+++ b/menu.html
@@ -9,21 +9,28 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="menu.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Page Container -->
-    <div class="container my-5">
+    <div class="container my-5 menu-section rounded">
       <!-- Page Header -->
-      <div class="text-center mb-5">
-        <h1 class="display-4">Dragon Ramen Den Menu</h1>
+      <div class="text-center mb-5 border-bottom">
+        <h1 class="display-2">Dragon Ramen Den Menu</h1>
         <p class="lead">
           Discover our flavorful selection of signature ramen dishes, delicious
           appetizers, and unique drinks.
         </p>
       </div>
+      
 
       <!-- Signature Ramen Section -->
-      <div class="mb-5">
+      <div class="mb-5 border-bottom">
         <h2 class="text-center mb-4">Signature Ramen</h2>
         <div class="row">
           <div class="col-md-6 col-lg-4 menu-item">
@@ -54,7 +61,7 @@
       </div>
 
       <!-- Appetizers Section -->
-      <div class="mb-5">
+      <div class="mb-5 border-bottom">
         <h2 class="text-center mb-4">Appetizers</h2>
         <div class="row">
           <div class="col-md-6 col-lg-4 menu-item">
@@ -101,6 +108,17 @@
             <span class="price">$9.99</span>
           </div>
         </div>
+      </div>
+      <div
+        class="containerposition-relative d-flex justify-content-center align-items-center g-0"
+      >
+        <a
+          href="index.html"
+          class="btn btn-warning btn-lg active custom-btn"
+          role="button"
+          aria-pressed="true"
+          >Home</a
+        >
       </div>
     </div>
 
