--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="menu.html">Menu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
@@ -34,7 +34,7 @@
         </div>
       </nav>
       <div class="container-fluid position-relative hero d-flex align-items-center justify-content-center g-0">
-        <img src="images/Untitled design-8.png" class="img-fluid w-100 " alt="...">
+        <img src="images/Dragon Ramen Logo-2.png"img-fluid w-100 " alt="...">
        </div>
         
     </div>
@@ -66,7 +66,7 @@
       </button>
     </div>
     <div class="container-fluid position-relative d-flex justify-content-center align-items-center g-0">
-      <img src="images/background.png" class="img-fluid w-100" alt="...">
+      <img src="images/something about the food here-5.png" class="img-fluid w-100" alt="...">
       <div class="overlay-text position-absolute text-center">
         <a href="menu.html" class="btn btn-warning btn-lg active custom-btn" role="button" aria-pressed="true">Explore Our Menu</a>
         </div>
