--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,27 @@
     />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-light border-bottom border-body" data-bs-theme="light" ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Dragon Ramen Den</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- Page Container -->
     <div class="container my-5 menu-section rounded">
       <!-- Page Header -->
